# Sensora

./: README.md
backend/: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  api_tester.rest  database_setup.sql  openapi.yml
backend/predefined-calls/Sensora/: bruno.json
backend/predefined-calls/Sensora/auth/: Login.bru  Register.bru
backend/predefined-calls/Sensora/environments/: Dev.bru
backend/predefined-calls/Sensora/mailservice/: Verify.bru  folder.bru
backend/src/: configuration.rs  main.rs  security.rs
backend/src/database/: controller.rs  group.rs  mod.rs  plant.rs  query_builder.rs  room.rs  sensor.rs  target_value.rs  user.rs  value.rs
backend/src/models/: controller.rs  group.rs  mod.rs  plant.rs  room.rs  sensor.rs  target_value.rs  user.rs  value.rs
backend/src/server/: error.rs  mod.rs
backend/src/server/handler/: mod.rs
backend/src/server/handler/auth/: login.rs  register.rs
backend/src/server/handler/device/: get_devices.rs
backend/src/server/handler/group/: create_group.rs  delete_group.rs  edit_group.rs  get_group.rs  invite_to_group.rs  join_group.rs  kick_group.rs  leave_group.rs  mod.rs
backend/src/server/handler/plant/: create_plant.rs  delete_plant.rs  edit_plant.rs  get_plant.rs  mod.rs
backend/src/server/handler/room/: create_room.rs  delete_room.rs  edit_room.rs  get_room.rs  get_rooms.rs  mod.rs
backend/src/server/handler/user/: delete_user.rs  edit_user.rs  get_user.rs  mod.rs
backend/src/server/middleware/: auth.rs  log.rs  mod.rs
backend/src/utils/: wait_group.rs
backend/src/validation/: date_time.rs  empty_string.rs  for_all.rs  if_than_else.rs  illegal_chars.rs  mail.rs  min_length.rs  mod.rs  one_of.rs  password.rs  required.rs
iot/: .cproject  (+3 more)
iot/main/: .cproject  CMakeLists.txt  auth_service.c  auth_service.h  device_manager.c  device_manager.h  led_control.c  led_control.h  main.c  pump_manager.c  pump_manager.h  sensor_manager.c  sensor_manager.h  solace_manager.c  solace_manager.h  system_data_manager.c  system_data_manager.h  wifi_manager.c  wifi_manager.h  wifi_setup_html.h
iot/main/certs/: server_cert.pem  server_key.pem
sensora service/auth-service/: CMakeLists.txt  Dockerfile  app.py  esp32_controller.c  requirements.txt  test_admin.py  test_controller.py  test_db.py  test_setpoints.py
(+529 files in other folders)
