[package]
name = "Sensora"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
rand = "0.9.0"
serde_json = "1.0.137"
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4"] }
chrono = {  version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
rust-argon2 = "2.1"
jsonwebtoken = "9.3.1"
validator = "0.20.0"
regex = "1.11.1"
serde_urlencoded = "0.7.1"

